--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -577,6 +577,11 @@
     border-radius: 20px;
     border: 1px solid @all-containers-borders-bg;
 
+    background-color: transparent;
+    background: transparent;
+    outline-color: transparent;
+    outline: none;
+    box-shadow: none;
 }
 
 .avatar_grid {
