--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -1,4 +1,3 @@
-
 /*LOG_IN and REGISTRATION START*/
 
 @import url("color.css");
@@ -303,7 +302,7 @@
     -gtk-icon-shadow: none;
 }
 
-.chat_gpt_response > .view {
+.chat_gpt_response>.view {
 
     font-family: 'Inter';
     font-style: normal;
@@ -704,6 +703,24 @@
     box-shadow: none;
     color: @chat-and-group-label-text-color;
 }
+
+.entry_for_search_user {
+    border-radius: 14px;
+    margin-left: 10px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    border-color: @all-containers-borders-bg;
+    background: transparent;
+    background-repeat: no-repeat;
+    outline-color: @all-containers-borders-bg;
+    box-shadow: none;
+    color: @chat-and-group-label-text-color;
+}
+
+
 
 .group_label {
     font-family: 'Open Sans';
@@ -1244,3 +1261,33 @@ settings_dark_scheme_btn:hover {
 }
 
 /*SETTINGS END*/
+
+
+.checkbox_btn {
+    transition: all 0.3s ease;
+}
+
+.checkbox_btn:hover {
+    border-color: #0b76ef;
+}
+
+.empty_chat_box {
+    background: #13131A;
+    border-radius: 20px;
+}
+
+.empty_chat_label {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 15px;
+
+    color: #FFFFFF;
+}
+
+.empty_chat_grid {
+    background: #171722;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
