small css changed with messages

--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -1340,9 +1340,34 @@
 
 .empty {}
 
-.message {
+.received_message {
 
-    border-radius: 10px 0px 10px 10px;
+    border-radius: 10px 10px 10px 0px;
+    font-family: 'JetBrains Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    background: #13131A;
+
+
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+    box-shadow: none;
+    border: transparent;
+
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+
+}
+
+.sent_message {
+
+    border-radius: 10px 10px 0px 10px;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
