--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -1208,8 +1208,8 @@
 }
 
 .settings_default_scheme_btn {
-    margin-left: 25px;
-    margin-top: 10px;
+    /* margin-left: 25px;
+    margin-top: 10px; */
     border-radius: 50%;
     background: #171722;
     border: 1px solid @all-containers-borders-bg;
@@ -1226,8 +1226,8 @@
 
 
 .settings_purple_scheme_btn {
-    margin-left: 25px;
-    margin-top: 10px;
+    /* margin-left: 25px;
+    margin-top: 10px; */
     border-radius: 50%;
     background: #9475cf;
     border: 1px solid @all-containers-borders-bg;
@@ -1243,8 +1243,8 @@
 }
 
 .settings_dark_scheme_btn {
-    margin-left: 25px;
-    margin-top: 10px;
+    /* margin-left: 25px;
+    margin-top: 10px; */
     border-radius: 50%;
     background: green;
     border: 1px solid @all-containers-borders-bg;
@@ -1257,6 +1257,72 @@
 
 .settings_dark_scheme_btn:active {
     transform: translateY(-1px);
+}
+
+
+
+.settings_icon_btn {
+    border-color: transparent;
+    border-radius: 50%;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/settings_icon_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+}
+
+.settings_label_btn {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    color: @bit-text-col;
+    font-size: 1.1em;
+    background: #171717;
+    box-shadow: none;
+    border: none;
+    border-radius: 15px;
+    transition: all .4s;
+    outline-color: transparent;
+    outline: none;
+}
+
+.settings_label_btn:hover {
+    border-radius: 15px;
+    transform: translateY(-10px);
+    box-shadow: 0 15px 0 -4px #39a2db,
+        0 16px 10px -3px #39a2db,
+        0 7px 0 -2px #EEEEFF;
+}
+
+.settings_label_btn:active {
+    transition: all 0.2s;
+    transform: translateY(-5px);
+    box-shadow: 0 2px 0 -2px #EEEEFF,
+        0 8px 0 -4px #39a2db,
+        0 12px 10px -3px #39a2db;
+}
+
+.choose_theme_box {
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.pick_theme_label {
+
+
+    font-family: 'JetBrains Mono';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height */
+
+
+    color: #B1BAE6;
 }
 
 /*SETTINGS END*/
